--- a/nvme_ol_84.adoc
+++ b/nvme_ol_84.adoc
@@ -369,7 +369,7 @@ NSID        UUID                                  Size
 |===
 |NetApp Bug ID	|Title	|Description	|Bugzilla ID
 
-|1517321	|Oracle Linux 8.4 NVMe-oF hosts create duplicate Persistent Discovery Controllers	|On Oracle Linux 8.4 NVMe over Fabrics (NVMe-oF) hosts, you can use the "nvme discover -p" command to create Persistent Discovery Controllers (PDCs). When this command is used, only one PDC should be created per initiator-target combination. However, if you are running ONTAP 9.10.1 and Oracle Linux 8.4 with an NVMe-oF host, a duplicate PDC is created each time "nvme discover -p" is executed. This leads to unnecessary usage of resources on both the host and the target.	|2087000
+|1517321	|Oracle Linux 8.4 NVMe-oF hosts create duplicate Persistent Discovery Controllers	|On Oracle Linux 8.4 NVMe over Fabrics (NVMe-oF) hosts, you can use the "nvme discover -p" command to create Persistent Discovery Controllers (PDCs). When this command is used, only one PDC should be created per initiator-target combination. However, if you are running ONTAP 9.10.1 and Oracle Linux 8.4 with an NVMe-oF host, a duplicate PDC is created each time "nvme discover -p" is executed. This leads to unnecessary usage of resources on both the host and the target.	|18118
 |===
 
 == Troubleshooting
