--- a/nvme_ol_90.adoc
+++ b/nvme_ol_90.adoc
@@ -195,76 +195,88 @@ include::_include/nvme/reuse_configure_nvmetcp.adoc[]
 . Verify that the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
 +
 ----
-# nvme discover -t tcp -w 192.168.1.8 -a 192.168.1.51
-Discovery Log Number of Records 10, Generation counter 119
+<<specify the command>>
+----
+Example output
++
+----
+#  nvme discover -t tcp -w 192.168.6.13 -a 192.168.6.15
+Discovery Log Number of Records 6, Generation counter 8
 =====Discovery Log Entry 0======
 trtype: tcp
 adrfam: ipv4
-subtype: nvme subsystem
+subtype: unrecognized
 treq: not specified
 portid: 0
-trsvcid: 4420
-subnqn: nqn.1992-08.com.netapp:sn.56e362e9bb4f11ebbaded039ea165abc:subsystem.nvme_118_tcp_1
-traddr: 192.168.2.56
+trsvcid: 8009
+subnqn: nqn.1992-08.com.netapp:sn.1c6ac66338e711eda41dd039ea3ad566:discovery
+traddr: 192.168.6.17
 sectype: none
 =====Discovery Log Entry 1======
 trtype: tcp
 adrfam: ipv4
-subtype: nvme subsystem
+subtype: unrecognized
 treq: not specified
 portid: 1
-trsvcid: 4420
-subnqn: nqn.1992-08.com.netapp:sn.56e362e9bb4f11ebbaded039ea165abc:subsystem.nvme_118_tcp_1
-traddr: 192.168.1.51
+trsvcid: 8009
+subnqn: nqn.1992-08.com.netapp:sn.1c6ac66338e711eda41dd039ea3ad566:discovery
+traddr: 192.168.5.17
 sectype: none
 =====Discovery Log Entry 2======
+trtype: tcp
+adrfam: ipv4
+subtype: unrecognized
+treq: not specified
+portid: 2
+trsvcid: 8009
+subnqn: nqn.1992-08.com.netapp:sn.1c6ac66338e711eda41dd039ea3ad566:discovery
+traddr: 192.168.6.15
+sectype: none
+=====Discovery Log Entry 3======
 trtype: tcp
 adrfam: ipv4
 subtype: nvme subsystem
 treq: not specified
 portid: 0
 trsvcid: 4420
-subnqn: nqn.1992-08.com.netapp:sn.56e362e9bb4f11ebbaded039ea165abc:subsystem.nvme_118_tcp_2
-traddr: 192.168.2.56
+subnqn: nqn.1992-08.com.netapp:sn.1c6ac66338e711eda41dd039ea3ad566:subsystem.host_95
+traddr: 192.168.6.17
 sectype: none
-...
+..........
+
 ----
 
-. Similarly, verify that the other NVMe/TCP initiator-target LIF combinations are able to successfully fetch discovery log page data. 
-Example,
+. Verify that the other NVMe/TCP initiator-target LIF combinations are able to successfully fetch discovery log page data. 
 +
 ----
-#nvme discover -t tcp -w 192.168.1.8 -a 192.168.1.51
-# nvme discover -t tcp -w 192.168.1.8 -a 192.168.1.52
-# nvme discover -t tcp -w 192.168.2.9 -a 192.168.2.56
-# nvme discover -t tcp -w 192.168.2.9 -a 192.168.2.57
+<<specify the command>>
 ----
-
-. Now run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes. MAke sure you pass a longer `ctrl_loss_tmo` period (such as, say 30 minutes, which can be set through `-l 1800`) during the `connect-all` so that it would retry for a longer period in the event of a path loss. For example,
++
+Example output
 +
 ----
-# nvme connect-all -t tcp -w 192.168.1.8 -a 192.168.1.51 -l 1800
-# nvme connect-all -t tcp -w 192.168.1.8 -a 192.168.1.52 -l 1800
-# nvme connect-all -t tcp -w 192.168.2.9 -a 192.168.2.56 -l 1800
-# nvme connect-all -t tcp -w 192.168.2.9 -a 192.168.2.57 -l 1800
+#nvme discover -t tcp -w 192.168.5.13 -a 192.168.5.15
+# nvme discover -t tcp -w 192.168.5.13 -a 192.168.5.17
+# nvme discover -t tcp -w 192.168.6.13 -a 192.168.6.15
+# nvme discover -t tcp -w 192.168.6.13 -a 192.168.6.17
 ----
 
---
-
-.Third tab
---
-// content placeholder
---
-
-====
-
+. Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes, and set the controller loss timeout period for at least 30 minutes or 1800 seconds:
++
+----
+<<specify the command>>
+----
++
+----
+# nvme connect-all -t tcp -w 192.168.5.13 -a 192.168.5.15 -l 1800
+# nvme connect-all -t tcp -w 192.168.5.13 -a 192.168.5.17 -l 1800
+# nvme connect-all -t tcp -w 192.168.6.13-a 192.168.6.15 -l 1800
+# nvme connect-all -t tcp -w 192.168.6.13-a 192.168.6.17-l 1800
+----
 
 ===	Enable 1MB I/O size
 
 include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
-
-
-== Configure the Marvell/QLogic FC Adapter for NVMe/FC
 
 
 == Validate NVMe/FC
