--- a/nvme_ol_90.adoc
+++ b/nvme_ol_90.adoc
@@ -34,13 +34,13 @@ You can enable the NVMe/FC in-kernel multipath using the following procedure.
 
 .Steps
 
-. Install Oracle Linux 9.0 GA on the server. After the installation is complete, verify that you are running the specified Oracle Linux 9.0 GA kernel. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the most current list of supported versions.
+. Install Oracle Linux 9.0 GA on the server. After the installation is complete, verify that you are running the specified Oracle Linux 9.0 GA kernel. 
 +
 ----
 # uname -r
 ----
 +
-Example output:
+*Example output:*
 +
 ----
 5.15.0-0.30.19.el9uek.x86_64
@@ -52,7 +52,7 @@ Example output:
 # rpm -qa|grep nvme-cli
 ----
 +
-Example output
+*Example output:*
 +
 ----
 nvme-cli-1.16-3.el9.x86_64
@@ -64,7 +64,7 @@ nvme-cli-1.16-3.el9.x86_64
 # cat /etc/nvme/hostnqn
 ----
 +
-Example output
+*Example output:*
 +
 ----
 nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0032-3310-8033-b8c04f4c5132
@@ -76,7 +76,7 @@ nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0032-3310-8033-b8c04f4c5132
 ::> vserver nvme subsystem host show -vserver vs_ol_nvme
 ----
 +
-Example output
+*Example output:*
 +
 ----
 Vserver     Subsystem          Host NQN
@@ -96,7 +96,6 @@ You can configure NVME/FC for Broadcom/Emulex adapters or Marvell/Qlogic adapter
 
 [role="tabbed-block"]
 ====
-
 .Broadcom/Emulex
 --
 .Steps
@@ -105,9 +104,22 @@ You can configure NVME/FC for Broadcom/Emulex adapters or Marvell/Qlogic adapter
 +
 ----
 # cat /sys/class/scsi_host/host*/modelname
+----
++
+*Example output:*
++
+----
 LPe32002-M2
 LPe32002-M2
+----
++
+----
 # cat /sys/class/scsi_host/host*/modeldesc
+----
++
+*Example output:*
++
+----
 Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 ----
@@ -197,7 +209,7 @@ include::_include/nvme/reuse_configure_nvmetcp.adoc[]
 ----
 <<specify the command>>
 ----
-Example output
+*Example output:*
 +
 ----
 #  nvme discover -t tcp -w 192.168.6.13 -a 192.168.6.15
@@ -252,7 +264,7 @@ sectype: none
 <<specify the command>>
 ----
 +
-Example output
+*Example output:*
 +
 ----
 #nvme discover -t tcp -w 192.168.5.13 -a 192.168.5.15
@@ -279,11 +291,11 @@ Example output
 include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
 
 
-== Validate NVMe/FC
+== Validate NVMe-oF
 
 .Steps
 
-. Verify the following NVMe/FC settings on the Oracle Linux 8.6 host:
+. Verify the following NVMe/FC settings on the Oracle Linux 9.0 host:
 +
 ----
 # cat /sys/module/nvme_core/parameters/multipath
