--- a/hu_wuhu_71_rn.adoc
+++ b/hu_wuhu_71_rn.adoc
@@ -15,12 +15,12 @@ summary: Release Notes for Windows Unified Host Utilities 7.1
 :imagesdir: ./media/
 
 
-This Release Notes document contains the latest information for the Windows Unified Host Utilities 7.1 release, including updates about new features, enhancements, and known issues. The document is updated when new information on using the Windows Host Utilities becomes available.
+This Release Notes document contains the latest information for the Windows Unified Host Utilities 7.1 and 7.2 releases, including updates about new features, enhancements, and known issues. The document is updated when new information on using the Windows Host Utilities becomes available.
 
-== About the Windows Unified Host Utilities 7.1 release
+== About the Windows Unified Host Utilities 
 The Windows Unified Host Utilities enable you to connect a Windows host computer to NetApp storage systems. The Windows Unified Host Utilities include an installation program that sets the required Windows registry and HBA values.
 
-The Windows Unified Host Utilities 7.1 continues to support the following versions of Windows:
+The Windows Unified Host Utilities continues to support the following versions of Windows:
 
 * Windows 2012
 * Windows 2012R2
@@ -32,8 +32,11 @@ The Windows Unified Host Utilities 7.1 continues to support the following versio
 NetApp qualifies additional components between releases of the Host Utilities software. For the latest information about the system requirements, see the link:https://mysupport.netapp.com/matrix/imt.jsp?components=65623;64703;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^].
 
 
-== Features in this Host Utilities release
-Windows Unified Host Utilities 7.1 includes support for E-Series storage systems, support for ONTAP 9 and later versions, and enhanced iSCSI timeouts for faster failover.
+== Features 
+
+* Windows Unified Host Utilities 7.1 includes support for E-Series storage systems, support for ONTAP 9 and later versions, and enhanced iSCSI timeouts for faster failover.
+
+* Windows Unified Host Utilities 7.2 includes support for NVMe/FC driver parameter settings and bug fixes for new vendor cards
 
 == Important cautions
 
@@ -43,7 +46,7 @@ For more information about an individual bug and to explore other bug-related to
 
 
 === Installing the required hotfixes
-To ensure a successful installation or upgrade of Windows Unified Host Utilities, you must install a specific Windows hotfix. Some hotfixes are a component of Windows updates. 
+To make sure a successful installation or upgrade of Windows Unified Host Utilities, you need to install a specific Windows hotfix. Some hotfixes are a component of Windows updates. 
 
 Refer to the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_wuhu_71.html[Windows Host Utilities documentation] for your specific configuration hotfix requirements.
 
