--- a/_include/nvme/reuse_nvme_verbose_logging.adoc
+++ b/_include/nvme/reuse_nvme_verbose_logging.adoc
@@ -1,3 +1,4 @@
+.Steps
 
 . Set the `lpfc_log_verbose` driver setting to any of the following values to log NVMe/FC events.
 +
@@ -13,9 +14,7 @@
 . Verify the settings.
 +
 ----
-# cat /etc/modprobe.d/lpfc.conf
-options lpfc lpfc_log_verbose=0xf00083
+# cat /etc/modprobe.d/lpfc.conf options lpfc lpfc_log_verbose=0xf00083
 
-# cat /sys/module/lpfc/parameters/lpfc_log_verbose
-15728771
+# cat /sys/module/lpfc/parameters/lpfc_log_verbose 15728771
 ----
