--- a/_include/nvme/reuse_nvme_qla2xxx_verbose_logging.adoc
+++ b/_include/nvme/reuse_nvme_qla2xxx_verbose_logging.adoc
@@ -1,15 +1,19 @@
-There is no similar specific qla2xxx logging for NVMe/FC as for the `lpfc` driver. Therefore, you can set the general qla2xxx logging level using the following steps:
 
 .Steps
 
 . Append the `ql2xextended_error_logging=0x1e400000` value to the corresponding `modprobe qla2xxx conf` file.
 
-. Recreate the `initramfs` by running `dracut -f` command and then reboot the host.
+. Execute the `dracut -f` command and then reboot the host.
 
-. After reboot, verify that the verbose logging has been applied as follows:
+. After reboot, verify that the verbose logging has been enabled:
 +
 ----
 # cat /etc/modprobe.d/qla2xxx.conf
+----
++
+Example output:
++
+----
 options qla2xxx ql2xnvmeenable=1 ql2xextended_error_logging=0x1e400000
 # cat /sys/module/qla2xxx/parameters/ql2xextended_error_logging
 507510784
