--- a/nvme_sles15_sp4.adoc
+++ b/nvme_sles15_sp4.adoc
@@ -5,7 +5,7 @@ keywords: nvme, linux, suse, sles, 15, sp4, server, enterprise
 summary: Describes how to configure NVMe/FC for SUSE Linux Enterprise Server 15 SP4 with ONTAP
 ---
 
-= NVMe-oF Host Configuration for SUSE Linux Enterprise Server 15 SP4 with ONTAP
+= NVMe-oF host configuration for SUSE Linux Enterprise Server 15 SP4 with ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
@@ -24,14 +24,15 @@ For additional details on supported configurations, see the link:https://mysuppo
 
 == Features
 
-* Support for NVMe secure, in-band authentication
-* Support for persistent discovery controllers using a unique discovery NQN
+* Support for NVMe secure, in-band authentication.
+* Support for persistent discovery controllers using a unique discovery NQN.
 
 == Known limitations
 
 There are no known limitations.
 
 == Configure NVMe/FC
+
 You can configure NVME/FC for Broadcom/Emulex adapters or Marvell/Qlogic adapters.
 
 === Broadcom/Emulex
@@ -124,12 +125,13 @@ Example output:
 +
 In this example, one initiator port is enabled and connected with two target LIFs.
 +
+[subs=+quotes]
 ----
 NVME Initiator Enabled
 XRI Dist lpfc0 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc0 WWPN x100000109b579d5e WWNN x200000109b579d5e DID x011c00 ONLINE
-NVME RPORT WWPN x208400a098dfdd91 WWNN x208100a098dfdd91 DID x011503 TARGET DISCSRVC ONLINE
-NVME RPORT WWPN x208500a098dfdd91 WWNN x208100a098dfdd91 DID x010003 TARGET DISCSRVC ONLINE
+NVME LPORT lpfc0 WWPN x100000109b579d5e WWNN x200000109b579d5e DID x011c00 *ONLINE*
+NVME RPORT WWPN x208400a098dfdd91 WWNN x208100a098dfdd91 DID x011503 *TARGET DISCSRVC ONLINE*
+NVME RPORT WWPN x208500a098dfdd91 WWNN x208100a098dfdd91 DID x010003 *TARGET DISCSRVC ONLINE*
 
 NVME Statistics
 LS: Xmt 0000000e49 Cmpl 0000000e49 Abort 00000000
@@ -141,9 +143,9 @@ FCP CMPL: xb 000014f4 Err 00012abd
 
 NVME Initiator Enabled
 XRI Dist lpfc1 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc1 WWPN x100000109b579d5f WWNN x200000109b579d5f DID x011b00 ONLINE
-NVME RPORT WWPN x208300a098dfdd91 WWNN x208100a098dfdd91 DID x010c03 TARGET DISCSRVC ONLINE
-NVME RPORT WWPN x208200a098dfdd91 WWNN x208100a098dfdd91 DID x012a03 TARGET DISCSRVC ONLINE
+NVME LPORT lpfc1 WWPN x100000109b579d5f WWNN x200000109b579d5f DID x011b00 *ONLINE*
+NVME RPORT WWPN x208300a098dfdd91 WWNN x208100a098dfdd91 DID x010c03 *TARGET DISCSRVC ONLINE*
+NVME RPORT WWPN x208200a098dfdd91 WWNN x208100a098dfdd91 DID x012a03 *TARGET DISCSRVC ONLINE*
 
 NVME Statistics
 LS: Xmt 0000000e50 Cmpl 0000000e50 Abort 00000000
@@ -156,13 +158,13 @@ FCP CMPL: xb 0000159d Err 000135c3
 
 . Reboot the host.
 
-=== Enable 1MB I/O size
+==== Enable 1MB I/O size
 
-The maximum size for an I/O request that ONTAP can receive from the host is 1MB. However, if you would like for host to issue an I/O request of that size, you must increase the the lpfc parameter from the default value of 64 to 256.
+The maximum size for an I/O request that ONTAP can receive from the host is 1MB. However, if you would like for host to issue an I/O request of that size, you need to increase the the `lpfc` parameter from the default value of `64` to `256`.
 
 .Steps
 
-. In the lpfc.conf file, set the lpfc value to 256:
+. In the `lpfc.conf` file, set the lpfc value to `256`:
 +
 ----
 cat /etc/modprobe.d/lpfc.conf options lpfc lpfc_sg_seg_cnt=256
@@ -203,10 +205,13 @@ include::_include/nvme/reuse_configure_nvmetcp.adoc[]
 .Steps
 
 . Verify that the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
-nvme discover -t tcp -w host-traddr  -a traddr
 +
 ----
+nvme discover -t tcp -w host-traddr  -a traddr
+----
++
 Example 
+----
 # nvme discover -t tcp -w 192.168.1.4 -a 192.168.1.31
 
 Discovery Log Number of Records 10, Generation counter 119
@@ -234,20 +239,21 @@ traddr: 192.168.2.36 sectype: none
 …
 ----
 
-. Verify that other NVMe/TCP initiator-target LIF combos can successfully fetch discovery log page data. 
+. Verify that all other NVMe/TCP initiator-target LIF combos can successfully fetch discovery log page data. 
 +
 ----
 nvme discover -t tcp -w host-traddr  -a traddr
 ----
 +
-----
 For example:
++
+----
 # nvme discover -t tcp -w 192.168.1.4 -a 192.168.1.32 
 # nvme discover -t tcp -w 192.168.2.5 -a 192.168.2.36 
 # nvme discover -t tcp -w 192.168.2.5 -a 192.168.2.37
 ----
 
-. Run nvme connect-all command across all the supported NVMe/TCP initiator-target LIFs across the nodes, and set the controller loss timeout period for at least 30 minutes or 1800 seconds:
+. Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes, and set the controller loss timeout period for at least 30 minutes or 1800 seconds:
 +
 ----
 nvme connect-all -t tcp -w host-traddr -a traddr -l ctrl_loss_timeout_in_seconds
@@ -392,15 +398,17 @@ Example output:
 }
 ----
 
-== Discovery Hardening - TP 8013 and TP 8014 (with ONTAP 9.11.1)
+== Discovery enhancements
 
-Beginning with ONTAP 9.11.1, you create a persistent discovery controller for your SLES 15 SP 4 host.
+Beginning with ONTAP 9.11.1, you create a persistent discovery controller for your SLES 15 SP4 host.
 
 .Steps
 
-. Verify the following <must fill in the accurate instruction>:
-
+. Verify that the discovery log page data is available and can be fetched through the initiator port - target LIF combo:
++
+----
 nvme discover -t tcp -w host-traddr -a traddr
+----
 +
 Example output:
 +
@@ -464,6 +472,11 @@ traddr: 192.168.1.116 eflags: not specified sectype: none
 . Create a Persistent Discovery Controller (PDC) connection to the discovery subsystem:
 +
 ----
+nvme discover -t tcp -w host-traddr -a traddr -p
+----
++
+Example output:
+----
 nvme discover -t tcp -w 192.168.1.16 -a 192.168.1.116 -p
 ----
 
@@ -490,13 +503,13 @@ Vserver UUID: 48391d66-c0a6-11ec-aaa5-d039ea165514
 
 == Set up secure in-band authentication
 
-Beginning with ONTAP 9.12.1 and later secure, in-band authentication is supported over NVMe/TCP between your SLES 15 SP host and your ONTAP controller.
+Beginning with ONTAP 9.12.1 and later, secure, in-band authentication is supported over NVMe/TCP between your SLES 15 SP host and your ONTAP controller.
 
-To set up secure authentication, each host or controller must be associated with a DH-HMAC-CHAP key which is a combination of the NQN of the NVMe host or controller and an authentication secret configured by the administrator. In order for an NVMe host or controller to authenticate its peer, it must know the key associated with the peer. 
+To set up secure authentication, each host or controller must be associated with a `DH-HMAC-CHAP` key which is a combination of the NQN of the NVMe host or controller and an authentication secret configured by the administrator. In order for an NVMe host or controller to authenticate its peer, it must recognize the key associated with the peer. 
 
 .Steps
 
-You can setup secure in-band authentication using the CLI or using a config JSON file. If you need to specify different dhcap keys for different subsystems, then you must use a config JSON file. 
+You can set up secure in-band authentication using the CLI or using a config JSON file. If you need to specify different dhcap keys for different subsystems, then you must use a config JSON file. 
 
 [role="tabbed-block"]
 ====
@@ -526,7 +539,7 @@ nvme gen-dhchap-key -s optiona_secret -l key_length {32|48|64} -m HMAC_function 
 +
 Example
 +
-In the following example, a random dhchap key with HMAC set to 3 (SHA-512) is generated.
+In the following example, a random `dhchap` key with HMAC set to 3 (SHA-512) is generated.
 +
 ----
 # nvme gen-dhchap-key -m 3 -n nqn.2014-08.org.nvmexpress:uuid:d3ca725a- ac8d-4d88-b46a-174ac235139b
@@ -534,16 +547,16 @@ DHHC-
 1:03:J2UJQfj9f0pLnpF/ASDJRTyILKJRr5CougGpGdQSysPrLu6RW1fGl5VSjbeDF1n1DEh 3nVBe19nQ/LxreSBeH/bx/pU=:
 ----
 
-. Generate the dhchap key for the controller:
+. Generate the `dhchap` key for the controller:
 +
 ----
 nvme gen-dhchap-key -s optiona_secret -l key_length {32|48|64}  -m HMAC_function {0|1|2|3}  -n host_nqn 
 ----
 +
 [NOTE] 
-During NVMe connect, you can use the -S option to input your user-defined dhchap key for the host and the -C option to input the dhchap key for the controller.
+During NVMe connect, you can use the `-S` option to input your user-defined `dhchap` key for the host and the `-C` option to input the `dhchap` key for the controller.
 
-. On the ONTAP controller, add the host and specify both dhchap keys:
+. On the ONTAP controller, add the host and specify both `dhchap` keys:
 +
 ----
 vserver nvme subsystem host add -vserver svm_name -subsystem subsystem -host-nqn host_nqn -dhchap-host-secret authentication_host_secret -dhchap-controller-secret authentication_controller_secret -dhchap-hash-function {sha-256|sha-512} -dhchap-group {none|2048-bit|3072-bit|4096-bit|6144-bit|8192-bit}
@@ -555,26 +568,40 @@ vserver nvme subsystem host add -vserver svm_name -subsystem subsystem -host-nqn
 nvme connect -t tcp -w ip_address -a ip_address -n host_nqn -S authentication_host_secret -C authentication_controller_secret 
 ----
 
-. Verify that the authentication keys are registered in the host sysfs file:
+. Verify that the authentication keys are registered in the host `sysfs` file:
 +
 ----
-nvme list
-nvme list-subsys
+nvme list 
+nvme list-subsys 
 nvme list-subsys /dev/nvem0n1
+----
++
+Example output:
++
+----
 # cat /sys/class/nvme-subsystem/nvme-subsys0/nvme0/dhchap_secret DHHC-1:01:NunEWY7AZlXqxITGheByarwZdQvU4ebZg9HOjIr6nOHEkxJg:
+
 
 # cat /sys/class/nvme-subsystem/nvme-subsys0/nvme0/dhchap_ctrl_secret DHHC-
 1:03:2YJinsxa2v3+m8qqCiTnmgBZoH6mIT6G/6f0aGO8viVZB4VLNLH4z8CvK7pVYxN6S5f OAtaU3DNi12rieRMfdbg3704=:
 ----
++
+[NOTE]
+The above command shows the dhchap host key while the second shows the dhchap ctrl key applied for that specific subsystem on the host.
++
+[NOTE]
+`nvme list` command returns all available namespaces on the host.
+`nvme list-subsys` command returns all available NVMe controllers on the host.
+`nvme list-subsys /dev/nvmeXnY` returns all the available subsystems along with its ANA/path states for that particular namespace nvmeXnY on the host.
 --
 
 .JSON file
 --
-Note that dhchap_key corresponds to dhchap_secret and dhchap_ctrl_key corresponds to dhchap_ctrl_secret. 
+Note that `dhchap_key` corresponds to `dhchap_secret` and `dhchap_ctrl_key` corresponds to `dhchap_ctrl_secret`. 
 
 .Steps
 
-. Configure the JSON file
+. Configure the JSON file.
 +
 ----
 # cat /etc/nvme/config.json [
@@ -609,7 +636,8 @@ Note that dhchap_key corresponds to dhchap_secret and dhchap_ctrl_key correspond
 ----
 
 . Connect to the ONTAP controller using the config JSON file.
-The discovery options from the/etc/nvme/discovery.conf file are automatically selected
++
+The discovery options from the `/etc/nvme/discovery.conf` file are automatically selected.
 +
 ----
 nvme connect-all -J /etc/nvme/config.json
@@ -632,7 +660,7 @@ traddr=192.168.2.117 is already connected
 traddr=192.168.1.117 is already connected
 ----
 
-. Verify that the dhcap secrets have been enabled to the respective controllers for each subsystem:
+. Verify that the dhcap secrets have been enabled for the respective controllers for each subsystem:
 +
 ----
 nvme list
@@ -677,7 +705,7 @@ cat /sys/class/nvme-subsystem/nvme-subsys1/nvme4/dhchap_ctrl_secret
 
 == Troubleshooting
 
-Before commencing any troubleshooting for any NVMe/FC failures, make sure that you are running a configuration that is compliant to the Interoperability Matrix Tool (IMT) specifications and then proceed with the next steps to debug any host side issues.
+Before troubleshooting any NVMe/FC failures, verify that you are running a configuration that is compliant to the Interoperability Matrix Tool (IMT) specifications and then proceed with the next steps to debug any host side issues.
 
 === Enable verbose logging
 
@@ -685,7 +713,7 @@ If you have an issue with your configuration, verbose logging can provide valuab
 
 .Steps
 
-The procedure to set verbose logging for Qlogic (Qla2xxx) is different from the procedure to set LFC verbose logging.
+The procedure to set verbose logging for Qlogic (Qla2xxx) is different from the procedure to set LPFC verbose logging.
 
 [role="tabbed-block"]
 ====
@@ -713,8 +741,8 @@ include::_include/hu/reuse_hu_contact_tech_support.adoc[]
 [cols="10,30,10",options="header"]
 |===
 |NetApp Bug ID	|Title	|Workaround
-|1490498	| Host crash at `crypto_ahash_digest()` during NVMe reauthentication |None
-|1496739	| Host fails to disconnect after sending `auth_failure2` during reauthentication |None	
+|1490498	| Host is non-operational at `crypto_ahash_digest()` during NVMe reauthentication |None
+|1496739	| Host cannot disconnect after sending `auth_failure2` during reauthentication |None	
 |===
 
 //BURT 1529116 30 Jan 2023
